[package]
name = "bixby-dkwl-server"
version = "0.1.0"
authors = ["NeuroWhAI <tlsehdgus0212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
rocket = "0.4.2"
reqwest = "0.9.19"
serde_json = "1.0"